--- a/src/design/design.css
+++ b/src/design/design.css
@@ -38,3 +38,48 @@
     -fx-border-radius: 70px;
     -fx-background-radius: 70px;
 }
+.dashboard-top{
+    -fx-background-color: #313954;
+}
+.dashboard-sidebar{
+    -fx-background-color: #424B6c;
+}
+.dashboard-profilepic{
+    -fx-background-color: #3B4463;
+}
+.dashboard-menu{
+    -fx-text-fill: #D3D3D3;
+    -fx-background-color: #424B6C;
+    -fx-font-size: 18px;
+    -fx-font-family: calibri;
+    -fx-text-transform: uppercase;
+    -fx-font-weight: bold;
+    -fx-alignment: CENTER_LEFT;
+}
+.dashboard-menu:hover{
+    -fx-text-fill: white;
+    -fx-border-color: #0D8BC5;
+    -fx-border-width: 0px 0px 0px 5px;
+    -fx-background-color: transparent;
+    -fx-cursor: hand;
+}
+.dashboard-menu:pressed{
+    -fx-text-fill: #0DA9F1;
+    -fx-border-color: #0D8BC5;
+    -fx-background-color: transparent;
+}
+-dashboard-menu-icons{
+    -fx-fill: #D3D3D3;
+}
+.dashboard-menu:pressed .dashboard-menu-icons{
+    -fx-fill: #0DA9F1;
+}
+.dashboard-btns{
+    -fx-background-color: white;
+    -fx-text-fill: #0DA9F1;
+}
+.dashboard-btns:hover{
+    -fx-background-color: white;
+    -fx-text-fill: #0DA9F1;
+    -fx-cursor: hand;
+}
